--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.63.0",
     "@studio-freight/react-lenis": "^0.0.47",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.456.0",
     "next": "14.2.16",
     "next-sanity": "^9.8.10",
     "react": "^18",
